--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.3",
+    "cheerio": "^1.0.0",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "pretty": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
